name:                 rest-neo
version:              0.1.1.0
synopsis:             Yet another driver using REST for Neo4j graph database
-- description:
-- license:
-- license-file:
homepage:             Neo4j driver
author:               Marcin Tolysz
maintainer:           tolysz@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
   exposed-modules:
       Database.Neo.Monad
       Database.Neo.Rest
       Database.Neo.Utils
       Database.Neo.NeoNode
       Database.Neo.NeoResponse
       Database.Neo.Cypher

  extensions: OverloadedStrings
  -- other-modules:
  -- other-extensions:
  build-depends: base >= 4.7 && < 5
               , mtl
               , aeson
               , possible
               , utf8-string
               , bytestring
               , text
               , lens
               , lens-aeson
               , containers
               , vector
               , http-client
               , http-client-extra
               , data-default
               , http-types

  hs-source-dirs:       src
  default-language:     Haskell2010
